feat: prep for API via yaml, missing login
